# throughline-engine

./: .gitignore  README.md  README.ru.md  SPEC.md  pyproject.toml
examples/: minimal_integration.py
research/: HEARTENGINE-CRITIQUE.md  README.md  behavioral-eval-protocol.md  voice-calibration-adaptation.md
tests/: test_archetype.py  test_composer_style.py  test_experience_resonance.py  test_moral.py  test_posture.py  test_synthetic.py  test_vetoes.py  test_voice.py
throughline/: __init__.py  archetype.py  composer.py  engine.py  experience.py  generalization.py  llm.py  moral.py  posture.py  repair.py  repos.py  resonance.py  scoring.py  storage.py  synthetic.py  types.py  vetoes.py  voice.py
