[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "throughline"
version = "0.1.0a7"
description = "Anima — an engine of human continuity and presence for AI assistants."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Throughline contributors" },
]
keywords = ["ai", "agents", "memory", "care", "privacy", "llm", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # SQLCipher backend — precompiled wheel, no gcc/libsqlcipher needed.
    # Drop-in DB-API 2.0 compatible with the legacy `pysqlcipher3` which
    # storage.py also accepts as a fallback if this one is unavailable.
    "sqlcipher3-binary >= 0.5.4",
    "pydantic >= 2.0",
    "python-dateutil >= 2.8",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-asyncio >= 0.21",
    "black >= 23.0",
    "ruff >= 0.1",
    "mypy >= 1.0",
]
llm = [
    "openai >= 1.0",   # for generalization & composition; pluggable
]

[project.urls]
Homepage = "https://github.com/alxnklmn/throughline-engine"
Documentation = "https://github.com/alxnklmn/throughline-engine/blob/main/SPEC.md"
Issues = "https://github.com/alxnklmn/throughline-engine/issues"
Source = "https://github.com/alxnklmn/throughline-engine"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
